--- a/src/styles/MainTop.module.css
+++ b/src/styles/MainTop.module.css
@@ -1,9 +1,4 @@
-.top {
-    display: flex;
-    height: 48px;
-}
-
-.week_container {
+.main_content {
     left: 390px;
     display: flex;
 }
@@ -23,14 +18,25 @@
     align-items: center;
 }
 
-.day_container {
+.week__days {
+    flex: 1;
     display: flex;
+    height: 100%;
+}
+
+.day_container {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
 }
 
 .day {
-    flex: 1;
     height: 24px;
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+.day_base {
+    flex: 1;
 }
